<resources>
    <string name="app_name">KovenSoft</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_exit">Exit</string>
    <string name="about">Kovensoft is one of the leading recruiting companies in the country and is a leading global player serving large multinational and large business conglomerates. It is currently serving the companies for its manpower needs across India and international markets such as USA, Europe, the Far East and the Middle East
    </string>
    <string name="about1">Kovensoft understands the fact that human resource is one of the most important essences of the business.We always have striven to improve the quality of our services by understanding our clients Requirements.
    </string>
    <string name="about2">We keep a closer eye of the changing world, anticipate needs and seize opportunities and grow both as individuals and as a company. This enables us to stay ahead of competition and form a long-term and mutually rewarding partnership with our clients.


    </string>
    <string name="oganisation">
We keep a closer eye of the changing world, anticipate needs and seize opportunities and grow both as individuals and as a company. This enables us to stay ahead of competition and form a long-term and mutually rewarding partnership with our clients.
    </string>
    <string name="title_activity_services">Services</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="slider_1">Success Solution</string>
    <string name="slider_2">Right Opportunity Right People Right Place</string>
    <string name="slider_3">We are Fully Passionate about helping you</string>
    <string name="slider_4">500+ Companies waiting for you</string>
    <string name="home_para1">Kovensoft is one of the leading recruiting companies in the country and is a leading global player serving large multinational and large business conglomerates. It is currently serving the companies for its manpower needs across India and international markets such as USA, Europe, the Far East and the Middle East.</string>
    <string name="home_para2">Since our inception in , we have developed intense capabilities in several functional and specialty segments and have emerged as a versatile Recruiting Consultants providing ultimate solution in Manpower.</string>
    <string name="title_activity_solutions">SolutionsActivity</string>
    <string name="tab_text_1">Mobile Solutions</string>
    <string name="tab_text_2">Network Soluiotns</string>
    <string name="tab_text_3">Enterprise Solutions</string>
    <string name="text_mobile">Mobile Solutions:</string>
    <string name="mobile_image_content_description">Mobile Solutions</string>
    <string name="mobile_description">No matter what your mobile dreams are, Kovensoft can make them come true.
        We understand the complex usability issues that are involved in mobile sites and applications,
        as well as the need for a consistent brand across platforms.
        Our mobile solutions consultants can help you take your Mobile business.
        We can formulate and execute a cost-effective strategy for your mobile solution that
        includes compatibility between mobile browsers, devices and platforms,
        optimized usability and real-time integration with CMS, ERP, CRM,
        Payment Gateways or any kind of existing / new Backend System.</string>
    <string name="title_network">Network Solutions :</string>
    <string name="image_network_description">Network Solutions</string>
    <string name="description_network">As the data center environment expands, companies must find new ways to improve efficiency.
        To increase performance and improve the availability of data management networks,
        enterprises are migrating the overall system configuration from the traditional direct server-to-storage
        connection to a switched shared server-to-storage connection via fiber-optic cabling.
         Networks are the backbone of your business and periodic evaluation is
        critical to accommodate new applications and to keep pace with business requirements.
        In today's business environment, enabling your network to work with multiple communication channels is paramount.
        Green IT offers design, integration and management services for customers who require flexible,
        robust and resilient network infrastructures. Our end-to-end network integration solutions help
        customers with complex network upgrades and mergers, expansions, or new deployments involving routers,
        switches, Firewalls, servers, and other network equipment.\n </string>
    <string name="description_network1">NET OPTIMIZATION SOLUTION\nSCALABILITY\nAVAILABILITY\nSECURITY\nPERFORMANCE</string>
    <string name="outsourcing">We offer customized outsourcing solutions beyond time and geographies to manage the HR operations of our clients. In this service support, our in-bound team assumes full human resource operations responsibilities of our clients, such as resume management, candidate selection, interview scheduling, boarding facilities, etc.
        The teams are deployed both on-site and off-site to manage the client recruitment needs based on their culture and structure. Being part of the industry, we understand the world and culture of our customers. This gives us an influence to support the recruitment and evaluation of the appropriate types of applications. Our commitment to building a sustainable workforce structure has made us build long-term relationships with our customers.</string>
    <string name="out">
    We also have a unique proposition model that is termed as "pay for success" model that proposes zero responsibility on the clients. Under this model, the client is not responsible for any fixed amount, but can only pay when a potential candidate joins the organization.
</string>
    <string name="consult">
        Companies today need to respond to changing market conditions with innovation and agility. Keeping ourselves ahead of that change and achieving long-term success requires continuous business transformation. Kovensoft Consulting Services provides integrated, end-to-end, integrated solutions and services to help your business transform with certainty.
    </string>
    <string name="consult1">

        We partner with you to understand and address your unique transformation imperatives. We work in transparent consultation with you to devise the best solutions in your class and define the best course of action to implement them throughout your organization. Our integrated IT and consulting services will provide continuity and consistency to your strategic programs.
    </string>
    <string name="consult2">
        The global network delivery model enables rapid scaling of participation, from analysis to implementation. Our high caliber consultants have the competence to meet your local and global business requirements. Proven methodologies and factual approach: Our methodologies incorporate our best practices and are established for uniform processes and accelerated deliveries. Our research and knowledge databases strengthen our fact-based approach to deliver the best solutions in their class.
    </string>
    <string name="software">
        Our software development process collects and translates business requirements into imaginative technology solutions that become reality with custom software development. Kovensoft development services offer efficient and reliable custom software systems, including mobile business applications, core and back-office IT solutions.


    </string>
    <string name="software1">
        Kovensoft provides a complete spectrum of custom software engineering services:
    </string>
    <string name="software2">
        Architecture Consulting and Design
        Software development
        Performance Engineering
        Enterprise Application Development
        Software quality assurance and testing
        Post-Development Support and Maintenance
    </string>
    <string name="mobile">
        In the current situation, where cell phones are no longer a basic gadget to send and receive calls and SMS, gadgets today has developed into a bright thin client capabilities of the rich customers. Nowadays gadgets can read web, play music and record active online and do numerous different exercises for you without using your PC...
    </string>
    <string name="Iphonedevelopment">IPhone App is the hot language in versatile figure. Iphone is a progressive phone with a large touch screen, an Ipod and fast web enabled skills. With the release of the programming industry Iphone saw a new beginning in improving portable applications, today IPhone is a financially savvy to convey different types of use is application real business CRM amusements widely used stage and Sensational.
    </string>
    <string name="android">Android is the most recent and most encouraging versatile processing stage offered by Google. Android offers open source coordination that has opened up a great opportunity to have tweaked apps on gadgets based on Android.</string>
    <string name="multimedia">
        ïƒ˜	Full mind location applications (maps and GPS enabled)
        ïƒ˜	2D and 3D fun in light of custom libraries and Open GL
        ïƒ˜	Business applications and web applications modified for Android.
        ïƒ˜	Our proven transport model and management framework standard industry enterprise is reliably ensures that the highest point of their risk status and get quality advances in each transport. Our constant research and training improvement training enables our client to achieve the fastest market with wide offers.
    </string>
    <string name="cloudservice">
        Kovensoft Services is notably positioned as the undisputed leader in the cloud infrastructure services space of India. In fact, with web-based provisioning and flexible administration and registration, we are one of the few players generally selected from now on to be able to convey the genuine strength of the cloud readily available. As the IT specialist organization in India, we have the aptitude, strength of cloud frameworks, we monitor the support of administrations and the ability to provide the entire IT base in the cloud.
    </string>
    <string name="cloudservice1">

    1.Reducing capital requirements for new activities
2.Buy and transport solid and adaptable servers
3.Take advantage of a dynamic and versatile server and server system
4.Develop and send new applications with less danger
5.Eliminate intrinsic postpositions in corporate endorsement and procurement forms
6.Minimize exorbitant downtime with greater transmission capacity and survival of processing assets


</string>
    <string name="cloudservice2">

        Advantages of Cloud Computing Redundant Infrastructure in India Recover the disappointments of the computers in a matter of seconds thanks to the programmed components of automatic recovery of the Hidden High Availability (HA) database of VMware and the deactivation of assets.
    </string>
    <string name="cloudservice3">
        Customer portal and fast provisioning Online access to manage and monitor your solution through valuable tools such as snapshots, resource performance graphs, alarms, booting, starting and stopping virtual machines, and fast provisioning of computer resources and software packages.

    </string>
    <string name="cloudservice4">
    High Performance Storage Data is stored in a SAN against a local disk that provides reliability and better disk performance.
</string>
</resources>