<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.kuncham.cont.kovensoft.Consulting">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:id="@+id/cloud_image"
            android:src="@drawable/cloud"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cloud_content"
            android:text="Cloud Services"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/cloud_image"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cloud_content1"
            android:text="@string/cloudservice"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/cloud_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cloud_content2"
            android:text="Why use a cloud solution?"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/cloud_content1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cloud_content3"
            android:text="@string/cloudservice1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/cloud_content2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cloud_content4"
            android:text="@string/cloudservice2"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/cloud_content3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cloud_content5"
            android:text="@string/cloudservice3"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/cloud_content4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cloud_content6"
            android:text="@string/cloudservice4"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/cloud_content5"/>


    </RelativeLayout>
</ScrollView>