<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kuncham.cont.kovensoft.HomePage"
    tools:showIn="@layout/app_bar_home_page">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="170dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/slider1" />

            <TextView
                style="@style/ImageTitle"
                android:text="@string/slider_1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/slider2" />

            <TextView
                style="@style/ImageTitle"
                android:text="@string/slider_2" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/slider3" />

            <TextView
                style="@style/ImageTitle"
                android:text="@string/slider_3" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/slider4" />

            <TextView
                style="@style/ImageTitle"
                android:text="@string/slider_4" />
        </RelativeLayout>
    </ViewFlipper>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome"
        android:textColor="#ff5733"
        android:layout_below="@id/view_flipper"
        android:textSize="22dp"
        android:textStyle="bold"
        android:layout_margin="15dp"/>
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:scaleType="centerCrop"
        android:layout_below="@id/tv_welcome"
        android:src="@drawable/welcome"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />
    <TextView
        android:id="@+id/para1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:text="@string/home_para1"
        android:layout_margin="5dp"
        />
        <TextView
            android:id="@+id/para2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/para1"
            android:text="@string/home_para2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/para2"
        android:text="Read More"
        android:background="#5cb85c"
        android:layout_margin="5dp"

        />

</RelativeLayout>
</ScrollView>