<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.kuncham.cont.kovensoft.Consulting">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:id="@+id/software_image"
            android:src="@drawable/software"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/software_content"
            android:text="Software Development"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/software_image"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/software_content1"
            android:text="@string/software"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/software_content"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/software_content2"
        android:text="@string/software1"
            android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/software_content1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/software_content3"
            android:text="@string/software2"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/software_content2"/>




    </RelativeLayout>
