<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kuncham.cont.kovensoft.Consulting">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:id="@+id/consult_image"
        android:src="@drawable/consulting"
        android:layout_margin="10dp"
        android:scaleType="centerCrop"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/consult_content"
        android:text="Consulting"
        android:textColor="#ff5733"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/consult_image"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/consult_content1"
        android:text="@string/consult"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/consult_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/consult_content2"
        android:text="Kovensoft Advantage"
        android:textColor="#ff5733"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/consult_content1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/consult_content3"
        android:text="@string/consult1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/consult_content2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/consult_content4"
        android:text="@string/consult2"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20sp"
        android:layout_below="@id/consult_content3"/>



</RelativeLayout>
</ScrollView>